# gamer-pulse

./: .gitignore  README.md  latest.json  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: collections.rs  games.rs  goals.rs  launcher.rs  mod.rs  scanner.rs  sessions.rs  settings.rs  stats.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/models/: collection.rs  game.rs  mod.rs  session.rs  stats.rs
src-tauri/src/monitor/: mod.rs  process_watcher.rs  session_recorder.rs
src-tauri/src/scanners/: battlenet.rs  custom.rs  ea.rs  epic.rs  gog.rs  mod.rs  riot.rs  steam.rs  ubisoft.rs  utils.rs  xbox.rs
src-tauri/src/state/: mod.rs
src/api/: client.ts
src/components/games/: CoverPickerModal.tsx  GameCard.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  TopNav.tsx
src/components/stats/: AchievementBadge.tsx  HeatmapCalendar.tsx  StreakBadge.tsx
src/hooks/: useGameEvents.ts  useGameEvents.tsx
src/pages/: CollectionDetail.tsx  Collections.tsx  Compare.tsx  Dashboard.tsx  GameDetail.tsx  History.tsx  Library.tsx  Settings.tsx  SpinToPick.tsx  Stats.tsx
src/store/: uiStore.ts
src/styles/: globals.css
src/utils/: format.ts  gameColor.ts
