[package]
name = "game-tracker"
version = "0.1.2"
description = "Gamer Pulse"
authors = ["you"]
edition = "2021"

[lib]
name = "game_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows registry
winreg = "0.52"

# Time & dates
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"

# Cross-platform process monitoring (replaces windows-rs for GNU compat)
sysinfo = "0.33"

# HTTP client for cover image fetching
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
